# openai-api.cpp

./: CMakeLists.txt
.github/workflows/: ci.yml
include/openai_api/: cluster_server.hpp  router.hpp  server.hpp  types.hpp
include/openai_api/cluster/: internal_protocol.hpp  worker_client.hpp  worker_manager.hpp
include/openai_api/core/: output_chunk.hpp
include/openai_api/encoder/: encoder.hpp
src/: cluster_server.cpp  router.cpp  server.cpp
src/cluster/: worker_client.cpp  worker_manager.cpp
tests/: test_cluster_full.cpp  test_integration.cpp
